# SparkBot_pro

./: .gitignore  ESP_SparkBot_五次课项目顺序与VibeCoding提示词.md  ESP_SparkBot_引脚与原理说明.md
LCD_blink/: CMakeLists.txt  LCD_BLINK_LESSON.md  README.md  VIBE_CODING_REPRODUCTION_GUIDE.md  pytest_lcd_blink.py  sdkconfig.defaults.esp32p4
LCD_color_audio/: CMakeLists.txt  LCD_COLOR_AUDIO_LESSON.md  README.md  sdkconfig  sdkconfig.defaults.esp32s3
LCD_color_frequency/: CMakeLists.txt  LCD_COLOR_FREQUENCY_ADVANCED.md  README.md  sdkconfig  sdkconfig.defaults.esp32s3
LCD_color_speech/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
LCD_color_speech/main/: CMakeLists.txt  Kconfig.projbuild  color_name_glyphs.inc  lcd_color_speech_main.c
LCD_face_cycle/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
LCD_face_touch_control/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults.esp32s3
LCD_face_voice_control/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
LCD_text_scroll/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
LCD_text_switch/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
LCD_weather/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
LCD_weather/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  mmap_generate_weather.h
LCD_weather/main/app/: app_display.c  app_display.h  app_power.c  app_power.h  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h
LCD_weather/main/ui/: ui.c  ui.h
LCD_weather/main/ui/screens/: ui_home.c
LCD_wifi_web_config/: README.md  (+3 more)
(+116 files in other folders)
